Amazon Fire Test Page
Test 10/18

--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@ function function5() {
 </script>
 </head>
 <body>
-<a href="https://branchsteramazon.app.link/pWjgrdYfG0?%243p=a_amazon&%24aaid=21fc5776-d77e-4a5f-bd95-f13a6c1dec92&%24idfa=21fc5776-d77e-4a5f-bd95-f13a6c1dec92&a_android_sha1_udid=21fc5776-d77e-4a5f-bd95-f13a6c1dec92&a_postback=branch.io&aax_site_name=Branch&aax_source_id=KSO&amazon_app_id=&amazon_tracking_id=&amzn_ad_tracking=&creative_size=&~ad_set_name=&~campaign=campaign&~cost_currency=&~cost_model=&~cost_value=&~creative_id=&~secondary_publisher=&%24os=AMAZON_FIRE_TV">Test Link for Fire TV</a>
-<br><br><br>
-<a href="https://branchsteramazon.app.link/DOtrZbhgG0?%243p=a_amazon&%24aaid=21fc5776-d77e-4a5f-bd95-f13a6c1dec92&%24idfa=21fc5776-d77e-4a5f-bd95-f13a6c1dec92&a_android_sha1_udid=__AAX_SHA1_UDID__&a_postback=__AAX_POSTBACK_URL__&aax_site_name=__AAX_SITE_NAME__&aax_source_id=__AAX_SOURCE_NAME__&amazon_app_id=__CS_APP_ID__&amazon_tracking_id=__AAX_TRACKING_ID__&amzn_ad_tracking=__AAX_AD_TRACKING__&creative_size=__CS_AD_SIZE__&~ad_set_name=__CS_AD_NAME__&~campaign=__CS_CAMPAIGN_NAME__&~cost_currency=__AAX_COST_CURRENCY__&~cost_model=__AAX_COST_MODEL__&~cost_value=__AAX_COST__&~creative_id=__CS_CREATIVE_ID__&~secondary_publisher=__CS_MSR_PARTNER__&%24os=AMAZON_FIRE_TV">Test Link for Fire Tablet</a>
+<p>
+<a href="https://branchsteramazon.app.link/lGHBCSNuG0?%243p=a_amazon&%24aaid=a32cf331-33cd-4769-a9a6-a59a74c00b16&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=e90c37c66359c472407e9076b096ab16d5f7bfaf&amazon_tracking_id=MTVT_654469&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE_TV">Test Link for Fire TV</a>
+·DSN: G2Q0R700843300RX
+·Advertising ID: a32cf331-33cd-4769-a9a6-a59a74c00b16
+</p>
+<br><br><br><br>
+
+ 
+<p>
+<a href="https://branchsteramazon.app.link/VDJMQbvvG0?%243p=a_amazon&%24aaid=798f5c2b-df9a-4689-99ba-0d2faa8b5aeb&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_925836&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE">Test Link for Fire Tablet</a>
+·DSN: G000KV0463150GJK
+·Advertising ID: 798f5c2b-df9a-4689-99ba-0d2faa8b5aeb
+</p>
 </html>
