--- a/index.html
+++ b/index.html
@@ -22,24 +22,13 @@ function function4() {
 function function5() {
 	window.top.location = "branchsters://open"
 }
-
 </script>
 </head>
 <body>
 <h3>
-<a href="https://branchsteramazon.app.link/lGHBCSNuG0?%243p=a_amazon&%24aaid=a32cf331-33cd-4769-a9a6-a59a74c00b16&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=e90c37c66359c472407e9076b096ab16d5f7bfaf&amazon_tracking_id=MTVT_654469&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE_TV">Test Link for Fire TV</a>
+<a href="https://branchsteramazon.app.link/lGHBCSNuG0?%243p=a_amazon&%24aaid=21fc5776-d77e-4a5f-bd95-f13a6c1dec92&%24idfa=&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_925836&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE">Test Link for Fire Tablet</a>
 <p>
-·DSN: G2Q0R700843300RX
-<p>
-·Advertising ID: a32cf331-33cd-4769-a9a6-a59a74c00b16
-</p>
-</p>
-</h3>
-<br><br><br><br>
-<h3>
-<a href="https://branchsteramazon.app.link/VDJMQbvvG0?%243p=a_amazon&%24aaid=798f5c2b-df9a-4689-99ba-0d2faa8b5aeb&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_925836&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE">Test Link for Fire Tablet</a>
-<p>
-·DSN: G000KV0463150GJK
+INTERNAL AMAZON TEST
 <p>
 ·Advertising ID: 798f5c2b-df9a-4689-99ba-0d2faa8b5aeb
 </p>
