--- a/index.html
+++ b/index.html
@@ -27,24 +27,28 @@ function function5() {
 <body>
 <p>
 <h2>
-<a href="https://branchsteramazon.app.link/pWjgrdYfG0?%243p=a_amazon&%24aaid=21fc5776-d77e-4a5f-bd95-f13a6c1dec92&%24idfa=&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_925836&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE_TV">Test Link for Fire TV</a>
+<a href="https://branchsteramazon.app.link/lGHBCSNuG0?%243p=a_amazon&%24aaid=8023574f-3a3d-4b56-916d-6fc8e85fd974&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=e90c37c66359c472407e9076b096ab16d5f7bfaf&amazon_tracking_id=MTVT_530355&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE_TV">Test Link for Fire TV</a>
 </h2>
 <p>
-INTERNAL AMAZON TV
+AMAZON FIRE TV TEST
 </p>
 <p>
-Advertising ID: 21fc5776-d77e-4a5f-bd95-f13a6c1dec92
+<h3>
+Advertising ID: 8023574f-3a3d-4b56-916d-6fc8e85fd974
+App ID: e90c37c66359c472407e9076b096ab16d5f7bfaf
 </p>
 </h3>
 <p>
 <h2>
-<a href="https://branchsteramazon.app.link/DOtrZbhgG0?%243p=a_amazon&%24aaid=3c2c103b-501c-47b0-b767-7b8810a85e9e&%24idfa=&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_925836&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE">Test Link for Fire Tablet</a>
+<a href="https://branchsteramazon.app.link/VDJMQbvvG0?%243p=a_amazon&%24aaid=023a424a-0b6d-4e0e-b7b5-bfe839b41225&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_291860&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE">Test Link for Fire Tablet</a>
 </h2>
 <p>
-INTERNAL AMAZON TABLET
+AMAZON FIRE TABLET TEST
 </p>
 <p>
-Advertising ID: 3c2c103b-501c-47b0-b767-7b8810a85e9e
+<h3>
+Advertising ID: 023a424a-0b6d-4e0e-b7b5-bfe839b41225
+App ID: 1c14187bb33643cbbb8f2da3a3033c8a
 </p>
 </h3>
 
