--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ App ID: e90c37c66359c472407e9076b096ab16d5f7bfaf
 </p>
 <p>
 <h2>
-<a href="https://branchsteramazon.app.link/VDJMQbvvG0?%243p=a_amazon&%24aaid=023a424a-0b6d-4e0e-b7b5-bfe839b41225&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_291860&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE">Test Link for Fire Tablet</a>
+<a href="https://branchsteramazon.app.link/VDJMQbvvG0?%243p=a_amazon&%24aaid=3c2c103b-501c-47b0-b767-7b8810a85e9e&a_android_sha1_udid=40bd001563085fc35165329ea1ff5c5ecbdbbeef&a_postback=https%3A%2F%2Fs.amazon-adsystem.com%2Fe%2Fre&aax_site_name=Wakescreen_MTVT&aax_source_id=KSO&amazon_app_id=1c14187bb33643cbbb8f2da3a3033c8a&amazon_tracking_id=MTVT_834111&amzn_ad_tracking=0&creative_size=9999x9999&~ad_set_name=99998888777MMPTrackerValidatorTestAd&~campaign=99998888777MMPTrackerValidatorTestCampaign&~cost_currency=&~cost_model=CPM&~cost_value=0.01&~creative_id=99887766554&~secondary_publisher=branch.com&%24os=AMAZON_FIRE ">Test Link for Fire Tablet</a>
 </h2>
 <p>
-AMAZON FIRE TABLET TEST
+INTERNAL AMAZON FIRE TABLET TEST
 </p>
 <p>
-Advertising ID: 023a424a-0b6d-4e0e-b7b5-bfe839b41225
+Advertising ID: 3c2c103b-501c-47b0-b767-7b8810a85e9e
 <p>
 App ID: 1c14187bb33643cbbb8f2da3a3033c8a
 </p>
